--- a/cat.html
+++ b/cat.html
@@ -50,7 +50,7 @@
             <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
             <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
           </fieldset>
-          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+          <input type="text" name="cat photo URL" placeholder="cat photo URL" required>
           <button type="submit">Submit</button>
         </form>
       </section>
